--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-15 Fri 13:30]
+#+CAPTION: Clock summary at [2019-03-15 Fri 14:50]
 | <75>                                                     |         |       |      |       |
 | Headline                                                 | Time    |       |      |     % |
 |----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *35:12* |       |      | 100.0 |
+| *Total time*                                             | *36:30* |       |      | 100.0 |
 |----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 35:12   |       |      | 100.0 |
-| Active                                                   |         | 35:12 |      | 100.0 |
-| Edit release notes for previous sprint                   |         |       | 2:22 |   6.7 |
-| Sprint and product backlog grooming                      |         |       | 4:41 |  13.3 |
-| Create a video demo for the sprint's features            |         |       | 3:47 |  10.7 |
+| Stories                                                  | 36:30   |       |      | 100.0 |
+| Active                                                   |         | 36:30 |      | 100.0 |
+| Edit release notes for previous sprint                   |         |       | 2:22 |   6.5 |
+| Sprint and product backlog grooming                      |         |       | 4:41 |  12.8 |
+| Create a video demo for the sprint's features            |         |       | 3:47 |  10.4 |
 | Make projects directory env optional                     |         |       | 0:10 |   0.5 |
 | Clang-cl builds are failing due to memory leak reporting |         |       | 0:45 |   2.1 |
-| Add tests for tracing, reporting and diffing             |         |       | 5:46 |  16.4 |
-| Delete extra files appears broken at present             |         |       | 6:26 |  18.3 |
-| Empty directories should be deleted                      |         |       | 5:37 |  16.0 |
-| Code generation of tests for dogen models                |         |       | 5:38 |  16.0 |
+| Add tests for tracing, reporting and diffing             |         |       | 5:46 |  15.8 |
+| Delete extra files appears broken at present             |         |       | 6:26 |  17.6 |
+| Empty directories should be deleted                      |         |       | 5:37 |  15.4 |
+| Code generation of tests for dogen models                |         |       | 6:56 |  19.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -556,8 +556,34 @@ The ideal state of the world is one where:
 - the template should have all of the parameters required such as
   types of variables.
 
+*** CANCELLED Weaving results in unnecessary rebuilds                 :story:
+    CLOSED: [2019-03-15 Fri 14:26]
+
+*Rationale*: it seems something else must have changed the files,
+cannot reproduce it any longer.
+
+ We've introduced weaving targets supposedly to make things faster - so
+ we don't have to generate a whole model. However, we are finding a lot
+ of touched files on weave:
+
+ : [1/29] Building CXX object projects/masd.dogen.generation.cpp/src/CMakeFiles/masd.dogen.generation.cpp.lib.dir/types/formatters/types/enum_header_formatter.cpp.o
+ : [2/29] Building CXX object projects/masd.dogen.generation.cpp/src/CMakeFiles/masd.dogen.generation.cpp.
+ : ...
+ : [22/29] Building CXX object projects/masd.dogen.generation.csharp/src/CMakeFiles/masd.dogen.generation.csharp.lib.dir/types/formatters/types/primitive_formatter.cpp.o
+ : [23/29] Building CXX object projects/masd.dogen.generation.csharp/src/CMakeFiles/masd.dogen.generation.csharp.lib.dir/types/formatters/types/class_formatter.cpp.o
+
+ This is still small compared to the total stitch templates:
+
+ : $ find . -iname '*.stitch' | wc -l
+ : 91
+
+ But clearly something untowards is happening with some of the
+ templates.
+
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-15 Fri 14:28]--[2019-03-15 Fri 14:50] =>  0:22
+    CLOCK: [2019-03-15 Fri 13:31]--[2019-03-15 Fri 14:27] =>  0:56
     CLOCK: [2019-03-15 Fri 13:15]--[2019-03-15 Fri 13:30] =>  0:15
     CLOCK: [2019-03-15 Fri 11:51]--[2019-03-15 Fri 12:00] =>  0:09
     CLOCK: [2019-03-15 Fri 11:14]--[2019-03-15 Fri 11:35] =>  0:21
@@ -644,6 +670,13 @@ we do nothing.
 
 If a project has tests (see story above) we should automatically
 ignore the test regular expressions.
+
+*** Changes to stitch templates are not reported correctly            :story:
+
+At the moment if we make a change to a template but forget to weave we
+get errors in tests but nothing shows up on the diffs or in the
+operations report.
+
 
 *** Element extensions considered harmful                             :story:
 
