--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,24 +14,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-15 Fri 16:00]
+#+CAPTION: Clock summary at [2019-03-15 Fri 16:42]
 | <75>                                                     |         |       |      |       |
 | Headline                                                 | Time    |       |      |     % |
 |----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *37:39* |       |      | 100.0 |
+| *Total time*                                             | *38:19* |       |      | 100.0 |
 |----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 37:39   |       |      | 100.0 |
-| Active                                                   |         | 37:39 |      | 100.0 |
-| Edit release notes for previous sprint                   |         |       | 2:22 |   6.3 |
-| Sprint and product backlog grooming                      |         |       | 4:41 |  12.4 |
-| Create a video demo for the sprint's features            |         |       | 3:47 |  10.0 |
+| Stories                                                  | 38:19   |       |      | 100.0 |
+| Active                                                   |         | 38:19 |      | 100.0 |
+| Edit release notes for previous sprint                   |         |       | 2:22 |   6.2 |
+| Sprint and product backlog grooming                      |         |       | 4:41 |  12.2 |
+| Create a video demo for the sprint's features            |         |       | 3:47 |   9.9 |
 | Make projects directory env optional                     |         |       | 0:10 |   0.4 |
 | Clang-cl builds are failing due to memory leak reporting |         |       | 0:45 |   2.0 |
-| Add tests for tracing, reporting and diffing             |         |       | 5:46 |  15.3 |
-| Delete extra files appears broken at present             |         |       | 6:26 |  17.1 |
-| Empty directories should be deleted                      |         |       | 5:37 |  14.9 |
-| Changes to stitch templates are not reported correctly   |         |       | 1:09 |   3.1 |
-| Code generation of tests for dogen models                |         |       | 6:56 |  18.4 |
+| Add tests for tracing, reporting and diffing             |         |       | 5:46 |  15.1 |
+| Delete extra files appears broken at present             |         |       | 6:26 |  16.8 |
+| Empty directories should be deleted                      |         |       | 5:37 |  14.7 |
+| Changes to stitch templates are not reported correctly   |         |       | 1:09 |   3.0 |
+| Code generation of tests for dogen models                |         |       | 7:36 |  19.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -605,6 +605,8 @@ Problems:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-15 Fri 16:30]--[2019-03-15 Fri 16:42] =>  0:12
+    CLOCK: [2019-03-15 Fri 16:01]--[2019-03-15 Fri 16:29] =>  0:28
     CLOCK: [2019-03-15 Fri 14:28]--[2019-03-15 Fri 14:50] =>  0:22
     CLOCK: [2019-03-15 Fri 13:31]--[2019-03-15 Fri 14:27] =>  0:56
     CLOCK: [2019-03-15 Fri 13:15]--[2019-03-15 Fri 13:30] =>  0:15
